app-gitops/app/istio/policies/ui-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: ui-mtls-disable
  namespace: app
spec:
  selector:
    matchLabels:
      app: ui
  mtls:
    mode: DISABLE
