app-gitops/app/istio/policies/vault-dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vault-nlb-dr
  namespace: app
spec:
  host: vault.tooling.internal
  trafficPolicy:
    tls:
      mode: DISABLE
