app-gitops/app/istio/policies/catalog-db-inbound.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-catalog-to-catalog-db
  namespace: app
spec:
  selector:
    matchLabels:
      app: catalog-db
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/app/sa/catalog-sa"]
