app-gitops/app/istio/policies/eggres-vault.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-egress-to-vault
  namespace: app
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["vault.tooling.internal"]
