app-gitops/app/istio/policies/orders-db-inbound.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-orders-db
  namespace: app
spec:
  selector:
    matchLabels:
      app: orders-db
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/app/sa/orders-sa"]
