app-gitops/app/istio/policies/ui-inbound.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ui-ingress
  namespace: app
spec:
  selector:
    matchLabels:
      app: ui
  action: ALLOW
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
